syntax = "proto3";

package user;

option go_package = "./user";

message IdRequest {
  string id = 1;
}

message UserRequest {
  string id = 1;
  string name = 2;
  string gender = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string gender = 3;
}

service User {
  rpc getUser(IdRequest) returns(UserResponse);
  rpc save(UserRequest) returns(UserResponse);
}